# GM-based-Tm-MCM

./: CMakeLists.txt  README.md  typescript
include/: Config.h  MatrixAB.h  MatrixCost.h  MatrixLoader.h  MatrixOptimizer.h  MatrixToFraction.h  MatrixToHDL.h  MatrixTools.h  MatrixTools_for_HDL.h  MatrixTransform.h  VerilogGenerator.h  VerilogGenerator_fraction.h  thread.h
sat_mcm/: .gitignore  MatrixProject  README_sat_mcm.md  log.txt  main.cpp
sat_mcm/.cmake/api/v1/reply/: cache-v2-aba82467bc712e70f09c.json  cmakeFiles-v1-db8c6fcd6b63e8966f92.json  codemodel-v2-fb04bd58dab81be892ad.json  directory-.-Debug-4d88ebff41288ddf57fe.json  index-2025-07-03T07-41-43-0699.json  target-satmcm-bin-Debug-4215a9dd5980acb32696.json  target-satmcm-lib-Debug-39c46a0b905494aaa582.json
sat_mcm/glucose/: libsyrup.lib
sat_mcm/glucose/core/: Solver.cc  Solver.h  SolverTypes.h
sat_mcm/glucose/parallel/: ClausesBuffer.cc  Main.cc  MultiSolvers.cc  ParallelSolver.cc  SolverConfiguration.cc  depend.mk  glucose-syrup
sat_mcm/glucose/simp/: Main.cc  Main.or  SimpSolver.cc  glucose_static
sat_mcm/glucose/utils/: Options.cc
sat_mcm/src/: adder_graph.cpp  adder_graph.h  mcm.cpp  mcm_syrup.cpp
script/: 1_single_gen.sh  all_scores.csv  satmcm
src/: Main.cpp  MatrixAB.cpp  MatrixCost.cpp  MatrixLoader.cpp  MatrixOptimizer.cpp  MatrixToFraction.cpp  MatrixToHDL.cpp  MatrixTools.cpp  MatrixTools_for_HDL.cpp  MatrixTransform.cpp  VerilogGenerator.cpp  VerilogGenerator_fraction.cpp  thread.cpp
